person name validation message using TextInputLayout - changed required/optional fields indication: required have * after the hint; optional don't have any suffix

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -43,10 +43,10 @@
 
     <!-- Form hints, labels, buttons -->
 
-    <string name="hint_person_name">Jméno</string>
-    <string name="hint_email">E-mail (nepovinný)</string>
+    <string name="hint_person_name">Jméno *</string>
+    <string name="hint_email">E-mail</string>
     <string name="hint_group_name">Jméno</string>
-    <string name="hint_description">Popis (nepovinný)</string>
+    <string name="hint_description">Popis</string>
     <string name="button_is_financial">Finanční</string>
     <string name="label_amount">Částka</string>
     <string name="hint_amount">Částka</string>
