--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,10 +43,10 @@
 
     <!-- Form hints, labels, buttons -->
 
-    <string name="hint_person_name">Имя</string>
-    <string name="hint_email">Электронная почта (необязательно)</string>
+    <string name="hint_person_name">Имя *</string>
+    <string name="hint_email">Электронная почта</string>
     <string name="hint_group_name">Название</string>
-    <string name="hint_description">Описание (необязательно)</string>
+    <string name="hint_description">Описание</string>
     <string name="button_is_financial">Денежный</string>
     <string name="label_amount">Сумма</string>
     <string name="hint_amount">Сумма</string>
