--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
 
     <string name="hint_person_name">Name *</string>
     <string name="hint_email">E-mail</string>
-    <string name="hint_group_name">Name</string>
+    <string name="hint_group_name">Name *</string>
     <string name="hint_description">Description</string>
     <string name="button_is_financial">Financial</string>
     <string name="label_amount">Amount</string>
