--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -45,7 +45,7 @@
 
     <string name="hint_person_name">Jméno *</string>
     <string name="hint_email">E-mail</string>
-    <string name="hint_group_name">Jméno</string>
+    <string name="hint_group_name">Jméno *</string>
     <string name="hint_description">Popis</string>
     <string name="button_is_financial">Finanční</string>
     <string name="label_amount">Částka</string>
