--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -96,7 +96,7 @@
     <string name="error_no_borrowed_item">Нужно уточнить одолженный предмет</string>
     <string name="error_person_exists_in_group">В этой группе уже есть человек с таким именем</string>
     <string name="error_group_exists">Гуппа с таким названием уже есть</string>
-    <string name="error_export">Не удалось экспортировать. Убедитесь, что карта SD вставлена</string>
+    <string name="error_export">Не удалось экспортировать. Убедитесь, что карта SD вставлена.</string>
     <string name="error_cannot_write_directory">Невозможно записать в эту папку</string>
     <string name="error_directory_exists">Папка/файл с таким названием уже есть</string>
     <string name="error_create_directory">Ошибка при создании папки</string>
