--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,7 +98,7 @@
     <string name="error_no_borrowed_item">You have to specify a borrowed item</string>
     <string name="error_person_exists_in_group">Person with this name already exists in this group</string>
     <string name="error_group_exists">Group with this name already exists</string>
-    <string name="error_export">Export failed. Make sure that your SD card is connected</string>
+    <string name="error_export">Export failed. Make sure that your SD card is connected.</string>
     <string name="error_cannot_write_directory">Cannot write into this folder</string>
     <string name="error_directory_exists">Folder/file with this name already exists</string>
     <string name="error_create_directory">Error while creating folder</string>
