moved export activity layout above the listview into the listview's header to make the whole layout nicely scrollable - changed the label "Groups" to "Select groups"

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -64,7 +64,7 @@
     <string name="label_datetime">Kdy</string>
     <string name="label_export_directory">Složka</string>
     <string name="hint_select_directory">Vyberte složku</string>
-    <string name="label_groups">Skupiny</string>
+    <string name="label_select_groups">Vyberte skupiny</string>
 
     <!-- ActionBar titles -->
 
