Warning message for not granted permissions

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -221,5 +221,6 @@
     <string name="withdrawal">Výběr</string>
     <string name="deposit">Vklad</string>
     <string name="debt_settlement">Vyrovnání dluhu</string>
+    <string name="permission_not_granted">Pro tuto akci jste nepovolil(a) oprávnění.</string>
 
 </resources>
